Step 1: Create game object config

--- a/data/config/binding-of-objects.ini
+++ b/data/config/binding-of-objects.ini
@@ -2,11 +2,15 @@
 
 [Display]
 ; FullScreen = false + Decoration = false + no dimension -> Borderless FullScreen
-Title           = binding-of-objects
+Title           = The Binding of Objects
 FullScreen      = false
 Decoration      = false
 Smoothing       = true
 VSync           = true
+
+[Physics]
+; Uncomment to show object bounding boxes
+; ShowDebug = true
 
 [Resource]
 Texture         = bundle: # bundle:binding-of-objects.obr # ../data/texture
@@ -14,50 +18,84 @@ Sound           = bundle: # bundle:binding-of-objects.obr # ../data/sound
 
 [Input]
 KEY_ESCAPE      = Quit
+KEY_LEFT        = MoveLeft
+KEY_RIGHT       = MoveRight
+KEY_UP          = MoveUp
+KEY_DOWN        = MoveDown
 
 [MainViewport]
 Camera          = MainCamera
+BackgroundColor = (50, 50, 50)
 
 [MainCamera]
 FrustumWidth    = 1280
 FrustumHeight   = 720
-FrustumFar      = 2
+FrustumFar      = 10
 FrustumNear     = 0
-Position        = (0, 0, -1) ; Objects with -1 <= Z <= 1 will be visible
-:Up:Up:Down:Down:Left:Right:Left:Right:B:A: = log "What did you expect here!?" true
+Position        = (0, 0, -2)
 
 [Scene]
-ChildList       = Object # Sound
+ChildList       = O-Hero # O-EnemyBug # O-EnemyBug # O-EnemyBug # O-EnemyBug # O-EnemyBug # O-EnemyBug
 
-[Object]
-Graphic         = @
-Texture         = logo.webp
+[O-Hero]
+Graphic         = G-Hero
+Position        = (0, 0, 0)
+Body            = B-Hero
+
+; Hero Class Data
+MovementSpeed   = 100.0
+
+[G-Hero]
+Texture         = Character_Boy.png
+
+[B-Hero]
+PartList        = BP-Hero
+Dynamic         = true
+
+[BP-Hero]
+Type            = box
+SelfFlags       = 0x0001
+CheckMask       = 0xFFFF
+
+[O-EnemyBug]
+Position        = (-600, 200, 0) ~ (600, 200, 0)
+Graphic         = G-EnemyBug
+Body            = B-EnemyBug
+
+; EnemyBug Class Data
+MovementSpeed   = 25.0
+DirectionChangeInterval = 0.5 ~ 2.5
+
+[G-EnemyBug]
+Texture         = Enemy_Bug.png
 Pivot           = center
-Scale           = 0.25
-AngularVelocity = 18
-FXList          = FadeIn # ColorCycle
 
-[Sound]
-SoundList       = @
-Sound           = appear.ogg
-LifeTime        = sound
+[B-EnemyBug]
+PartList        = BP-EnemyBug
 
-[FadeIn]
-SlotList        = @
-Type            = alpha
-Curve           = smooth
+[BP-EnemyBug]
+Type            = box
+SelfFlags       = 0x0002
+CheckMask       = 0xFFFF
+
+[FX-Flash]
+SlotList        = FXS-FlashRed # FXS-Unflash
+
+[FXS-FlashRed]
+Type            = color
+Curve           = smoother
 StartTime       = 0
-EndTime         = 1.5
-StartValue      = -1
-EndValue        = 0
-
-[ColorCycle]
-Loop            = true
-SlotList        = @
-Type            = hsv
-Curve           = linear
+EndTime         = 0.1
 Absolute        = true
-StartTime       = 0
-EndTime         = 6
-StartValue      = (0, 1, 1)
-EndValue        = (1, 1, 1)
+StartValue      = (255, 255, 255)
+Period          = 0.5
+EndValue        = (255, 0, 0)
+
+[FXS-Unflash]
+Type            = color
+Curve           = smoother
+StartTime       = @FXS-FlashRed.EndTime
+EndTime         = 0.2
+Absolute        = true
+StartValue      = @FXS-FlashRed.EndValue
+EndValue        = (255, 255, 255)
