Rename project from binding-of-objects to BindingOfObjects

--- a/data/config/BindingOfObjects.ini
+++ b/data/config/BindingOfObjects.ini
@@ -1,4 +1,4 @@
-; binding-of-objects - Template basic config file
+; BindingOfObjects - Template basic config file
 
 [Display]
 ; FullScreen = false + Decoration = false + no dimension -> Borderless FullScreen
@@ -13,8 +13,8 @@ VSync           = true
 ; ShowDebug = true
 
 [Resource]
-Texture         = bundle: # bundle:binding-of-objects.obr # ../data/texture
-Sound           = bundle: # bundle:binding-of-objects.obr # ../data/sound
+Texture         = bundle: # bundle:BindingOfObjects.obr # ../data/texture
+Sound           = bundle: # bundle:BindingOfObjects.obr # ../data/sound
 
 [Input]
 KEY_ESCAPE      = Quit
