--- a/data/config/BindingOfObjectsd.ini
+++ b/data/config/BindingOfObjectsd.ini
@@ -1,11 +1,11 @@
-; binding-of-objects - Basic template config file
+; BindingOfObjects - Basic template config file
 
 ; Loads regular config data
-@binding-of-objects.ini@
+@BindingOfObjects.ini@
 
 ; Overrides some values for debug
 [Display]
-Title           = binding-of-objects (Debug)
+Title           = BindingOfObjects (Debug)
 
 [Render]
 ShowFPS         = true
@@ -14,4 +14,4 @@ ShowFPS         = true
 WatchList       = Config # Texture # Sound
 
 [Bundle]
-ExcludeList    += binding-of-objectsd.ini
+ExcludeList    += BindingOfObjectsd.ini
